[package]
name = "wfc_image"
description = "Create patterns for wfc using image files"
version = "0.10.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/wfc.git"
repository = "https://github.com/stevebob/wfc.git"
documentation = "https://docs.rs/wfc_image"
edition = "2018"

[features]
parallel = ["wfc/parallel"]

[dependencies]
wfc = { path = "../wfc", version = "0.9" }
image = "0.23"
coord_2d = "0.2"
grid_2d = "0.14"
rand = "0.7"

[dev-dependencies]
rand_xorshift = "0.2"
simon = "0.4"
pixel_grid = "0.5"

[[example]]
name = "simple"

[[example]]
name = "very_simple"

[[example]]
name = "flowers"

[[example]]
name = "animate"

[[example]]
name = "anchor"
