[package]
name = "wfc"
description = "Generate images using Wave Function Collapse"
version = "0.9.2"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/wfc.git"
repository = "https://github.com/stevebob/wfc.git"
documentation = "https://docs.rs/wfc"
edition = "2018"

[features]
parallel = ["rayon", "rand_xorshift"]

[dependencies]
rand = "0.8"
hashbrown = "0.9"
coord_2d = "0.2"
grid_2d = "0.14"
direction = "0.17"
rayon = { version = "1.3", optional = true }
rand_xorshift = { version = "0.2", optional = true }
