[package]
name = "wfc"
description = "Generate images using Wave Function Collapse"
version = "0.10.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/wfc.git"
repository = "https://github.com/stevebob/wfc.git"
documentation = "https://docs.rs/wfc"
edition = "2018"

[features]
parallel = ["rayon", "rand_xorshift"]

[dependencies]
rand = "0.8"
hashbrown = "0.11"
coord_2d = "0.3"
grid_2d = "0.15"
direction = "0.18"
rayon = { version = "1.3", optional = true }
rand_xorshift = { version = "0.3", optional = true }
